--- a/index.html
+++ b/index.html
@@ -34,9 +34,11 @@
     <div id="main">
         <div id="page1">
             <canvas></canvas>
-            <h1>More than HR<br>
-                software</h1>
-            <p>Manage HR, Finance & IT from a single platform</p>
+            <h1>More than HR
+          <br>
+             software</h1>
+          
+            <h1 class="p56">Manage HR, Finance & IT from a single platform</h1>
         </div>
         <div class="page3"></div>
         <div class="text-2nd">
